--- a/index.html
+++ b/index.html
@@ -8,56 +8,60 @@
 <body>
     <div class="header">
         <div class="left-nav">
-            <img>
+            <p class="logo">Header Logo</p>
         </div>
         <div class="right-nav">
-            <a></a>
-            <a></a>
-            <a></a>
+            <a class="link" href="">header link one</a>
+            <a class="link" href="">header link two</a>
+            <a class="link" href="">header link three</a>
         </div>
         <div class="title">
-            <h1></h1>
-            <p></p>
-            <button></button>
+            <h1 class="headline">This website is awesome</h1>
+            <p class="subtext" class="desc">This website has some awesome subtext that goes here under the main title. It's a smaller font and the color is lwoer contrast.</p>
+            <button class="button" id="top-button">Sign up</button>
         </div>
         <div class="image">
-            <img>
+            <img class="hero-image" src="./images/hero1.jpg" alt="this is a placeholder for an image">
         </div>
     </div>
         
     <div class="info">
-        <h2></h2>
+        <h2 class="info-headline">Some random information.</h2>
         <div class="cards">
             <div class="one">
-                <img>
-                <p class="desc"></p>
+                <img class="card-image" src="./images/card1.jpg" alt="">
+                <p class="subtext" class="desc">this is some subtext under an illustration or image</p>
             </div>
             <div class="two">
-                <img>
-                <p class="desc"></p>
+                <img class="card-image" src="./images/card1.jpg" alt="">
+                <p class="subtext" class="desc">this is some subtext under an illustration or image</p>
             </div>
             <div class="three">
-                <img>
-                <p class="desc"></p>
+                <img class="card-image" src="./images/card1.jpg" alt="">
+                <p class="subtext" class="desc">this is some subtext under an illustration or image</p>
             </div>
             <div class="four">
-                <img>
-                <p class="desc"></p>
+                <img class="card-image" src="./images/card1.jpg" alt="">
+                <p class="subtext" class="desc">this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
 
     <div class="anecdote">
-        <p class="quote"></p>
-        <p class="source"></p>
+        <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="source">-Thor, God of Thunder</p>
     </div>
 
     <div class="footer">
         <div class="action">
-            <h3></h3>
-            <p></p>
+            <h3 class="footer-headline">Call to action! It's time!</h3>
+            <p class="subtext" class="footer-desc">Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button></button>
+        <button class="button" id="bottom-button">Sing up</button>
+    </div>
+
+    <div class="copyright">
+        <p class="c-text">Copyright &copy; The Odin Project 2021</p>
     </div>
 </body>
 </html>
